<resources>
    <!-- General -->
    <string name="app_name">EncuestaTPN</string>
    <string name="m_action_about">About</string>
    <string name="m_action_settings">Settings</string>
    <string name="m_action_exit">Exit</string>
    <!-- LoginActivity -->
    <string name="input_user">User</string>
    <string name="input_password">Password</string>
    <string name="btn_login">Login</string>
    <!-- IntroductionActivity -->
    <string name="txt_1">Your opinion is important to us</string>
    <string name="txt_2">Answer the next questions about our services</string>
    <string name="btn_start">Start</string>
    <!-- SatisfactionActivity -->
    <string name="txt_start">Satisfaction Survey</string>
    <string name="txt_question1">1. How you considered that was the received treatment?</string>
    <string name="txt_question2">2. Would you recommend us whit someone else?</string>
    <string name="txt_question3">3. Would you like to add some additional comments?</string>
    <string name="txt_answer1">Yes</string>
    <string name="txt_answer2">No</string>
    <string name="btn_send">Send</string>
    <!-- ThanksActivity -->
    <string name="txt_t1">¡Thank You!</string>
    <string name="txt_t2">We will take your opinion into a account</string>
    <string name="btn_close">Close</string>
    <!-- InformationActivity -->
    <string name="txt_i1">About Us</string>
    <string name="txt_i2">Tabacos del Pacifico Norte (TPN)</string>
    <string name="txt_i3">Tabacos del Pacifico Norte is an american company with offices in Mexico,
                          dedicated to the tabacco trade</string>
    <string name="txt_i4">Developer: Lilia Rosa Flores Olvera</string>
    <string name="txt_i5">Email: floresli@univmex.com</string>
    <string name="txt_i6">Telephone: 311-765-3540</string>
    <string name="txt_i7">Version: 1.0</string>
    <string name="txt_i8">¡Thanks fou use our App!</string>

</resources>
