<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThanksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_t1"
            android:textSize="@dimen/d_35"
            android:layout_marginBottom="@dimen/onespace"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_t2"
            android:textSize="@dimen/d_25"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/threespace"/>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/threespace"
            android:text="@string/btn_close"
            android:padding="@dimen/d_15"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>