<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroductionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_1"
            android:textSize="30dp"
            android:textAlignment="center"
            android:padding="@dimen/onespace"
            android:layout_margin="@dimen/onespace"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_2"
            android:textAlignment="center"
            android:padding="@dimen/twospace"
            android:textSize="@dimen/twospace"
            android:layout_margin="@dimen/onespace"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_15"
            android:layout_marginTop="@dimen/threespace"
            android:text="@string/btn_start"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>